--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-@media screen and (max-width: 768px){
+﻿@media screen and (max-width: 768px){
 	body{font-size: 5px;}
 }
 
 /* dinh dang navbar */
-#header nav{
+.navbar-inverse{
 	padding: 10px 20px 10px 10px;
 	text-transform: uppercase;
 	text-align: center;
